# deja-bug

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  README.md  TESTING.md  TESTING_PHASE3.md  TESTING_QUICK_START.md  research_report.md  test.py  test_mcp_protocol.py  test_ollama.py  test_phase3_comprehensive.py  test_server.py  test_vector_store.py
docs/: README.md  api-specification.md  setup.md
docs/adr/: 001-mcp-protocol.md  002-lancedb-choice.md  003-local-llm-strategy.md
extension/: .eslintrc.js  package.json  pnpm-lock.yaml  tsconfig.json
extension/src/: extension.ts
extension/src/achievements/: manager.ts
extension/src/insights/: detector.ts
extension/src/llm/: copilot-provider.ts  cursor-provider.ts  manager.ts  ollama-provider.ts  provider.ts
extension/src/mcp/: client.ts
extension/src/monitors/: terminal-monitor.ts
extension/src/ui/: notifications.ts  status-bar.ts  welcome.ts
extension/src/utils/: circular-buffer.ts  error-patterns.ts
extension/src/webview/: timeline.ts
server/: README.md  pyproject.toml
server/src/deja_bug/: __init__.py  __main__.py  llm_tools.py  patterns.py  server.py  timeline_tools.py
server/src/deja_bug/llm/: __init__.py  ollama_client.py  prompts.py
server/src/deja_bug/reports/: __init__.py  markdown_generator.py
server/src/deja_bug/storage/: __init__.py  vector_db.py
server/src/deja_bug_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
