[project]
name = "deja-bug-server"
version = "0.1.0"
description = "MCP server for Deja-Bug VS Code extension"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.2.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.6.0",
    "ollama>=0.1.6",
    "lancedb>=0.5.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
